syntax = "proto3";

package InputStreamShard;

option go_package = "go_video_streamer/internal/InputStreamShard;InputStreamShard";

message StreamShard {
  bytes image_data=1;
  uint32 width = 2;
  uint32 height = 3;
  float fps = 4;
  bool gzipped = 5;
  uint32 matType = 6;
}
